@@ -1,4 +1,4 @@
-{% extends "site_base.html" %}
+{% extends "account/base.html" %}
 
 {% load i18n %}
 {% load uni_form_tags %}
