@@ -1,3 +1,8 @@
+2011-04-07  Raymond Penners  <raymond.penners@intenct.nl>
+
+	* allauth/openid/views.py (login): Pass along "?next=" url
+	parameter.
+
 2011-02-13  Raymond Penners  <raymond.penners@intenct.nl>
 
 	* Added support for django-avatar, copying the Twitter profile
